--- a/rootdir/etc/init.redwood.rc
+++ b/rootdir/etc/init.redwood.rc
@@ -28,8 +28,8 @@ on boot
     chmod 0660 /dev/xiaomi-touch
 
     # Set dimlayer exposure permission
-    #chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dimlayer_exposure
-    #chmod 0664 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dimlayer_exposure
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dimlayer_exposure
+    chmod 0664 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dimlayer_exposure
 
 on init
     chown system system /dev/goodix_fp
